--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
 .App {
   text-align: center;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  color: grey;
+  font-family: "Lato", sans-serif;
+}
+.wrapper {
+  margin: 5em 0;
 }
 
 .App-logo {
@@ -37,10 +46,44 @@
   }
 }
 
+.names-container {
+  border: 2px solid #69dadb;
+  border-radius: 15px;
+  padding: 40px 15px;
+  margin: 25px;
+}
+.search {
+  border: 1px solid lightgrey;
+  padding: 10px 30px;
+  padding-left: 10px;
+  border-radius: 6px;
+}
+
+hr {
+  border-top: 1px solid rgb(231, 229, 229);
+  width: 50%;
+}
+
+button {
+  border: none;
+  margin: 5px;
+  border-radius: 4px;
+  padding: 5px;
+  font-family: "Lato", sans-serif;
+}
+
 .f {
-  background-color: pink;
+  background-color: #ffc0d3;
+  color: #980f5a;
 }
 
 .m {
-  background-color: lightblue;
+  background-color: rgb(139, 202, 223);
+  color: #325288;
+}
+
+@media only screen and (min-width: 1500px) {
+  .App {
+    width: 60%;
+  }
 }
