--- a/src/App.css
+++ b/src/App.css
@@ -7,43 +7,9 @@
   color: grey;
   font-family: "Lato", sans-serif;
 }
+
 .wrapper {
   margin: 5em 0;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .names-container {
@@ -57,6 +23,10 @@
   padding: 10px 30px;
   padding-left: 10px;
   border-radius: 6px;
+}
+
+.fav-container {
+  padding: 15px 0;
 }
 
 hr {
@@ -86,4 +56,18 @@ button {
   .App {
     width: 60%;
   }
+}
+
+.all-button {
+  background-color: #9cf3ed;
+}
+
+.girl-button {
+  background-color: #ffc0d3;
+  color: #980f5a;
+}
+
+.boy-button {
+  background-color: rgb(139, 202, 223);
+  color: #325288;
 }
